@startuml C3_Manage_Docks_Implementation_View
title C3 – Manage Docks API (Implementation / Component View)
left to right direction
hide empty members

skinparam rectangle {
  BackgroundColor White
  BorderColor Black
  FontColor Black
  FontStyle bold
}

skinparam class {
  BackgroundColor HoneyDew
  BorderColor Black
  FontColor Black
}

package "Controllers" {
  class DocksController {
    +GetDocks()
    +GetDock(id)
    +PostDock(dto)
    +PutDock(id, dto)
    +DeleteDock(id)
  }
}

package "Models" {
  class Dock {
    +int Id
    +string Name
    +string Location
    +decimal Length
    +decimal Depth
    +decimal MaxDraft
    +List<VesselType> AllowedVesselTypes
  }
  
  class DockDTO {
    +int Id
    +string Name
    +string Location
    +decimal Length
    +decimal Depth
    +decimal MaxDraft
    +List<VesselTypeDTO> AllowedVesselTypes
  }
  
  class CreateDockDTO {
    +string Name
    +string Location
    +decimal Length
    +decimal Depth
    +decimal MaxDraft
    +List<int> AllowedVesselTypeIds
  }
  
  class UpdateDockDTO {
    +int Id
    +string Name
    +string Location
    +decimal Length
    +decimal Depth
    +decimal MaxDraft
    +List<int> AllowedVesselTypeIds
  }
  
  class DockMapper {
    +ToDTO(Dock)
    +ToEntity(CreateDockDTO)
    +UpdateEntity(Dock, UpdateDockDTO)
  }
}

package "Data" {
  class PortContext {
    +DbSet<Dock> Docks
    +DbSet<VesselType> VesselTypes
  }
}

DocksController --> DockMapper
DocksController --> PortContext
DockMapper --> Dock
DockMapper --> DockDTO
DockMapper --> CreateDockDTO
DockMapper --> UpdateDockDTO

@enduml

